--- a/sass/components/_section-header.scss
+++ b/sass/components/_section-header.scss
@@ -14,7 +14,7 @@
 .section-header {
     background-color: var(--color-bg-main);
     padding: 0;
-    max-width: 1600px;
+    max-width: 100%;
     margin: 0 auto;
     & .container {
         display: flex;
