--- a/css/main.css
+++ b/css/main.css
@@ -224,7 +224,7 @@ img {
   margin-top: 0;
   margin-bottom: 10px;
   min-width: 210px;
-  max-width: 370px;
+  max-width: 440px;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -238,7 +238,7 @@ img {
 }
 .modal__textarea {
   min-width: 210px;
-  max-width: 370px;
+  max-width: 440px;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -316,6 +316,27 @@ img {
   appearance: none;
 }
 
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+    height: 609px;
+  }
+  .modal__input {
+    width: 400px;
+  }
+  .modal__textarea {
+    width: 400px;
+  }
+  .modal__check {
+    font-size: 12px;
+  }
+  .modal__input-checkbox {
+    top: 4px;
+  }
+  .modal__title {
+    line-height: 1.172;
+  }
+}
 @media screen and (min-width: 1200px) {
   .modal {
     width: 528px;
@@ -561,9 +582,7 @@ img {
   transition: -webkit-transform 250ms ease-in-out;
   transition: transform 250ms ease-in-out;
   transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -656,7 +675,7 @@ img {
 .section-header {
   background-color: var(--color-bg-main);
   padding: 0;
-  max-width: 1600px;
+  max-width: 100%;
   margin: 0 auto;
 }
 .section-header .container {
@@ -755,9 +774,10 @@ img {
       flex-wrap: wrap;
 }
 .section-lorem__icon {
-  position: absolute;
-  left: 20%;
-  top: -2%;
+  position: relative;
+  padding-top: 30px;
+  width: 100%;
+  height: 90px;
 }
 .section-lorem__list-icons {
   min-width: 290px;
@@ -767,9 +787,8 @@ img {
 }
 .section-lorem__svg {
   position: relative;
+  width: 100%;
   height: 120px;
-  min-width: 290px;
-  max-width: 480px;
   background-color: var(--color-bg-icons);
   border-radius: 4px;
   margin-bottom: 30px;
@@ -805,9 +824,6 @@ img {
   .section-lorem__svg {
     width: 354px;
   }
-  .section-lorem__icon {
-    left: 12%;
-  }
   .section-lorem__title {
     text-align: left;
   }
@@ -830,9 +846,6 @@ img {
   .section-lorem__list-icons {
     -ms-flex-preferred-size: 270px;
         flex-basis: 270px;
-  }
-  .section-lorem__icon {
-    left: 0%;
   }
   .section-lorem__title {
     text-align: center;
@@ -902,6 +915,9 @@ img {
       flex-wrap: wrap;
   padding-left: 15px;
   padding-right: 15px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .section-team__list {
   background-color: var(--color-white);
@@ -918,6 +934,7 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 450px;
 }
 .section-team__icons {
   font-size: 0;
@@ -996,10 +1013,10 @@ img {
   min-width: 290px;
 }
 .section-clients__list {
+  width: calc((100% - 60px) / 2);
   position: relative;
   border: 1px solid var(--color-social);
   height: 92px;
-  width: 210px;
   border-radius: 4px;
   -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1012,9 +1029,8 @@ img {
   position: relative;
   fill: var(--color-social);
   height: 70px;
-  width: 120px;
+  width: 100%;
   margin-left: 20px;
-  left: 15px;
   top: 2px;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
