--- a/sass/components/_section-team.scss
+++ b/sass/components/_section-team.scss
@@ -11,6 +11,7 @@
         flex-wrap: wrap;
         padding-left: 15px;
         padding-right: 15px;
+        justify-content: center;
     }
     &__list {
         background-color: var(--color-white);
@@ -20,6 +21,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        width: 450px;
     }
     &__icons {
         font-size: 0;
