--- a/sass/components/_top-header.scss
+++ b/sass/components/_top-header.scss
@@ -202,7 +202,7 @@
     font-weight: 500;
     transform: translateX(100%);
     transition: transform 250ms ease-in-out;
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: space-between;
 }
